blrlblelrlrl
/home/pi/midiMind/backend/src/storage/Settings.cpp: In lambda function:
/home/pi/midiMind/backend/src/storage/Settings.cpp:83:57: error: ‘settings_’ was not declared in this scope; did you mean ‘Settings’?
   83 |                         for (const auto& [key, value] : settings_) {
      |                                                         ^~~~~~~~~
      |                                                         Settings
/home/pi/midiMind/backend/src/storage/Settings.cpp:84:64: error: cannot convert ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::__cxx11::basic_string<char>, std::allocator<std::__cxx11::basic_string<char> > >&’
   84 |                                 auto result = database_.execute(
      |                                               ~~~~~~~~~~~~~~~~~^
   85 |                                         "INSERT OR REPLACE INTO settings (key, value) VALUES (?, ?)",
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   86 |                                         {key, value}
      |                                         ~~~~~~~~~~~~            
   87 |                                 );
      |                                 ~                               
In file included from /home/pi/midiMind/backend/src/storage/Settings.h:37,
                 from /home/pi/midiMind/backend/src/storage/Settings.cpp:20:
/home/pi/midiMind/backend/src/storage/Database.h:212:59: note:   initializing argument 2 of ‘midiMind::DatabaseResult midiMind::Database::execute(const std::string&, const std::vector<std::__cxx11::basic_string<char>, std::allocator<std::__cxx11::basic_string<char> > >&)’
  212 |                           const std::vector<std::string>& params = {});
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/home/pi/midiMind/backend/src/storage/Settings.cpp: In member function ‘bool midiMind::Settings::save()’:
/home/pi/midiMind/backend/src/storage/Settings.cpp:100:62: error: ‘count’ was not declared in this scope; did you mean ‘std::count’?
  100 |         Logger::info("Settings", "✓ Saved " + std::to_string(count) + " settings");
      |                                                              ^~~~~
      |                                                              std::count
In file included from /usr/include/c++/14/algorithm:86,
                 from /usr/include/nlohmann/json.hpp:21,
                 from /home/pi/midiMind/backend/src/storage/Settings.h:35:
/usr/include/c++/14/pstl/glue_algorithm_defs.h:101:1: note: ‘std::count’ declared here
  101 | count(_ExecutionPolicy&& __exec, _ForwardIterator __first, _ForwardIterator __last, const _Tp& __value);
      | ^~~~~
make[2]: *** [CMakeFiles/midimind.dir/build.make:177: CMakeFiles/midimind.dir/src/storage/Settings.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
